WIP: Remove `StatementMetadata`, replace with concept of `StatementContext<T>` and `statementIdentifier`